# spacemining-sim

./: .gitignore  README.md
.github/workflows/: build.yaml  dev_image.yaml  rust_ci.yaml
ros2_ws/: Dockerfile  README.md  build.sh  external.repos  hfsmbth.drawio  shell.sh  space.dockerfile  space_build.sh  space_shell.sh
ros2_ws/src/arm/: CMakeLists.txt  package.xml
ros2_ws/src/arm/action/: Arm.action
ros2_ws/src/arm/src/: dummy_arm_action_server.hpp  main.cpp
ros2_ws/src/bringup/: package.xml
ros2_ws/src/bringup/launch/: bringup_launch.py
ros2_ws/src/macro_sim/: Cargo.toml  README.md  package.xml
ros2_ws/src/macro_sim/src/: main.rs
ros2_ws/src/rover/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rover/src/: main.cpp
ros2_ws/src/rover_fsm_hfsm2/: CMakeLists.txt  package.xml
ros2_ws/src/rover_fsm_hfsm2/src/: fsm.hpp  main.cpp
ros2_ws/src/rover_fsm_hfsm2/src/hfsm2/: machine.hpp
ros2_ws/src/rover_fsm_hfsm2/src/test/: test.cpp
ros2_ws/src/rover_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/rover_interfaces/action/: NavigateToPosition.action
ros2_ws/src/rover_interfaces/msg/: GeoPose2D.msg
ros2_ws/src/rover_interfaces/srv/: SendNavTarget.srv
ros2_ws/src/work_bt/: CMakeLists.txt  package.xml
ros2_ws/src/work_bt/action/: DoWork.action
ros2_ws/src/work_bt/config/: excavator_bt.xml
ros2_ws/src/work_bt/launch/: excavator_bt_launch.py
ros2_ws/src/work_bt/msg/: WorkResult.msg
ros2_ws/src/work_bt/src/: action_client_bt_node.hpp  main.cpp  simple_ros_action_node.hpp  sleep_bt_node.hpp
